# chorizard

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  compose.yaml  manage.py  pyproject.toml
chorizard/: asgi.py  settings.py  urls.py  wsgi.py
chorizard/chores/: apps.py  forms.py  models.py  urls.py  views.py
chorizard/chores/jinja2/: home.html.j2  homepage.html.j2
chorizard/family/: apps.py  models.py  permissions.py  urls.py  views.py
chorizard/family/jinja2/: manage.html.j2
chorizard/jinja2/templates/: base.html.j2
chorizard/oidc/: __init__.py
chorizard/permissions/: __init__.py  api.py  data.py  permissions.schema  permissions.zed
chorizard/settings/: __init__.py  base.py  builtin.py  oidc.py  permissions.py
dockerfiles/postgresql/: Dockerfile  db-init.sql
dockerfiles/spicedb/: Dockerfile  entrypoint.sh
